refactor: replace SymbolTable with Stacks in JajaCodeInterpreter and related classes