@@ -11,12 +11,10 @@ import java.util.stream.Stream;
 import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -70,15 +68,15 @@ class MiniJajaInterpreterVisitorTest {
         InstructionsNode instrs = ((MainNode) ast.getMethodeMain()).getInstrs();
         assertNotNull(instrs, "main instructions should not be null");
         InstructionNode instr = instrs.getInstructionNode();
-        assertTrue(instr instanceof AffectationNode, "expected first instruction to be an affectation");
+        assertInstanceOf(AffectationNode.class, instr, "expected first instruction to be an affectation");
         return ((AffectationNode) instr).getExpression();
     }
 
     @Test
-    void simpleProgramResource_buildsExpectedAst() throws IOException {
+    void simpleProgramResource_buildsExpectedAst() throws IOException, URISyntaxException {
         URL url = getClass().getClassLoader().getResource("simple_program.mjj");
         assertNotNull(url, "Resource simple_program.mjj not found");
-        String source = Files.readString(Path.of(url.getPath()));
+        String source = Files.readString(Paths.get(url.toURI()));
 
         ClasseNode ast = parseFromString(source);
         String expected = "Classe(Ident(C),decls (var (int , Ident(x) , nbre(0)),vnil),Main(vnil, Inil))";
@@ -121,115 +119,123 @@ class MiniJajaInterpreterVisitorTest {
 
     @Test
     void exp_plus_and_times_instanceof_structure() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = 1 + 2 * 3; }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = 1 + 2 * 3; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof PlusNode, "top expression should be PlusNode");
+        assertInstanceOf(PlusNode.class, expr, "top expression should be PlusNode");
         AstNode left = ((PlusNode) expr).getExp2();
         AstNode right = ((PlusNode) expr).getTerme();
-        assertTrue(left instanceof NbreNode, "left of + should be number");
-        assertTrue(right instanceof MultiplicationNode, "right of + should be a MultiplicationNode (precedence)");
+        assertInstanceOf(NbreNode.class, left, "left of + should be number");
+        assertInstanceOf(MultiplicationNode.class, right, "right of + should be a MultiplicationNode (precedence)");
         AstNode rLeft = ((MultiplicationNode) right).getTerme();
         AstNode rRight = ((MultiplicationNode) right).getFact();
-        assertTrue(rLeft instanceof NbreNode, "left of * should be number");
-        assertTrue(rRight instanceof NbreNode, "right of * should be number");
+        assertInstanceOf(NbreNode.class, rLeft, "left of * should be number");
+        assertInstanceOf(NbreNode.class, rRight, "right of * should be number");
     }
 
     @Test
     void exp_unary_minus_instanceof() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = -1; }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = -1; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof UnaryMinusNode, "expected UnaryMinusNode");
-        assertTrue(((UnaryMinusNode) expr).getTerme() instanceof NbreNode, "unary minus applies to a number");
+        assertInstanceOf(UnaryMinusNode.class, expr, "expected UnaryMinusNode");
+        assertInstanceOf(NbreNode.class, ((UnaryMinusNode) expr).getTerme(), "unary minus applies to a number");
     }
 
     @Test
     void exp_division_instanceof() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = 8 / 2; }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = 8 / 2; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof DivisionNode, "expected DivisionNode");
-        assertTrue(((DivisionNode) expr).getTerme() instanceof NbreNode);
-        assertTrue(((DivisionNode) expr).getFact() instanceof NbreNode);
+        assertInstanceOf(DivisionNode.class, expr, "expected DivisionNode");
+        assertInstanceOf(NbreNode.class, ((DivisionNode) expr).getTerme());
+        assertInstanceOf(NbreNode.class, ((DivisionNode) expr).getFact());
     }
 
     @Test
     void exp_equals_instanceof() {
-        String source = "class C {\n" +
-                "  boolean b;\n" +
-                "  main { b = 1 == 1; }\n" +
-                "}";
+        String source = """
+                class C {
+                  boolean b;
+                  main { b = 1 == 1; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof EqualsNode, "expected EqualsNode");
-        assertTrue(((EqualsNode) expr).getExp1() instanceof NbreNode);
-        assertTrue(((EqualsNode) expr).getExp2() instanceof NbreNode);
+        assertInstanceOf(EqualsNode.class, expr, "expected EqualsNode");
+        assertInstanceOf(NbreNode.class, ((EqualsNode) expr).getExp1());
+        assertInstanceOf(NbreNode.class, ((EqualsNode) expr).getExp2());
     }
 
     @Test
     void exp_greater_than_instanceof() {
-        String source = "class C {\n" +
-                "  boolean b;\n" +
-                "  main { b = 2 > 1; }\n" +
-                "}";
+        String source = """
+                class C {
+                  boolean b;
+                  main { b = 2 > 1; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof GreaterThanNode, "expected GreaterThanNode");
-        assertTrue(((GreaterThanNode) expr).getExp1() instanceof NbreNode);
-        assertTrue(((GreaterThanNode) expr).getExp2() instanceof NbreNode);
+        assertInstanceOf(GreaterThanNode.class, expr, "expected GreaterThanNode");
+        assertInstanceOf(NbreNode.class, ((GreaterThanNode) expr).getExp1());
+        assertInstanceOf(NbreNode.class, ((GreaterThanNode) expr).getExp2());
     }
 
     @Test
     void exp_logical_and_instanceof() {
-        String source = "class C {\n" +
-                "  boolean b;\n" +
-                "  main { b = true && false; }\n" +
-                "}";
+        String source = """
+                class C {
+                  boolean b;
+                  main { b = true && false; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof AndNode, "expected AndNode");
+        assertInstanceOf(AndNode.class, expr, "expected AndNode");
         // Order may vary in rendering; only assert child types
         AstNode a = ((AndNode) expr).getExp();
         AstNode b = ((AndNode) expr).getExp1();
-        assertTrue(a instanceof BoolValueNode);
-        assertTrue(b instanceof BoolValueNode);
+        assertInstanceOf(BoolValueNode.class, a);
+        assertInstanceOf(BoolValueNode.class, b);
     }
 
     @Test
     void exp_logical_or_instanceof() {
-        String source = "class C {\n" +
-                "  boolean b;\n" +
-                "  main { b = false || true; }\n" +
-                "}";
+        String source = """
+                class C {
+                  boolean b;
+                  main { b = false || true; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof OrNode, "expected OrNode");
+        assertInstanceOf(OrNode.class, expr, "expected OrNode");
         AstNode a = ((OrNode) expr).getExp();
         AstNode b = ((OrNode) expr).getExp1();
-        assertTrue(a instanceof BoolValueNode);
-        assertTrue(b instanceof BoolValueNode);
+        assertInstanceOf(BoolValueNode.class, a);
+        assertInstanceOf(BoolValueNode.class, b);
     }
 
     @Test
     void exp_logical_not_instanceof() {
-        String source = "class C {\n" +
-                "  boolean b;\n" +
-                "  main { b = !false; }\n" +
-                "}";
+        String source = """
+                class C {
+                  boolean b;
+                  main { b = !false; }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof NotNode, "expected NotNode");
-        assertTrue(((NotNode) expr).getExp() instanceof BoolValueNode);
+        assertInstanceOf(NotNode.class, expr, "expected NotNode");
+        assertInstanceOf(BoolValueNode.class, ((NotNode) expr).getExp());
     }
 
     // @Test
@@ -248,52 +254,56 @@ class MiniJajaInterpreterVisitorTest {
 
     @Test
     void fact_exp() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = (3); }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = (3); }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
-        assertTrue(expr instanceof Expression, "expected ParenNode");
+        assertInstanceOf(Expression.class, expr, "expected ParenNode");
     }
 
     @Test
     void fact_listexp_one_exp() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = f(42); }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = f(42); }
+                }""";
         ClasseNode ast = parseFromString(source);
         // System.out.println("AST: " + ast.toStringTree());
         AstNode expr = firstMainExpression(ast);
         // System.out.println("expr: " + expr.toStringTree());
 
-        assertTrue(expr instanceof AppelENode, "expected AppelENode");
+        assertInstanceOf(AppelENode.class, expr, "expected AppelENode");
     }
 
     @Test
     void instr_somme() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x+=42; }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x+=42; }
+                }""";
         ClasseNode ast = parseFromString(source);
         InstructionsNode instrs = ((MainNode) ast.getMethodeMain()).getInstrs();
         assertNotNull(instrs, "main instructions should not be null");
         InstructionNode instr = instrs.getInstructionNode();
-        assertTrue(instr instanceof SommeNode, "expected first instruction to be a somme");
+        assertInstanceOf(SommeNode.class, instr, "expected first instruction to be a somme");
     }
 
     @Test
     void fact_listexp_multiple_exps() {
-        String source = "class C {\n" +
-                "  int x = 0;\n" +
-                "  main { x = f(42, 43); }\n" +
-                "}";
+        String source = """
+                class C {
+                  int x = 0;
+                  main { x = f(42, 43); }
+                }""";
         ClasseNode ast = parseFromString(source);
         AstNode expr = firstMainExpression(ast);
 
-        assertTrue(expr instanceof AppelENode, "expected AppelENode");
+        assertInstanceOf(AppelENode.class, expr, "expected AppelENode");
     }
 
 }
